--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
   compile 'com.android.support:appcompat-v7:22.1.1'
+  testCompile 'org.mockito:mockito-all:1.9.5'
+  testCompile 'junit:junit:4.10'
 }
