--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_6
     targetCompatibility JavaVersion.VERSION_1_6
   }
+
+  testOptions {
+    unitTests.returnDefaultValues = true
+  }
 }
 
 dependencies {
