Add butter knife as dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 dependencies {
   compile 'com.android.support:appcompat-v7:23.0.1'
   compile 'com.google.guava:guava:18.0'
+  compile 'com.jakewharton:butterknife:7.0.1'
   testCompile 'org.mockito:mockito-all:1.9.5'
   testCompile 'junit:junit:4.10'
 }
