--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,55 +1,56 @@
 buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.1.1'
-  }
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.0'
+    }
 }
 apply plugin: 'com.android.application'
 
 repositories {
-  jcenter()
+    jcenter()
 }
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
-  defaultConfig {
-    applicationId "com.github.pedrovgs.androidgameboyemulator"
-    minSdkVersion 9
-    targetSdkVersion 22
-    versionCode 1
-    versionName "1.0"
-  }
+    defaultConfig {
+        applicationId "com.github.pedrovgs.androidgameboyemulator"
+        minSdkVersion 9
+        targetSdkVersion 22
+        versionCode 1
+        versionName "1.0"
+    }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_6
-    targetCompatibility JavaVersion.VERSION_1_6
-  }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
+    }
 
-  testOptions {
-    unitTests.returnDefaultValues = true
-  }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
-  compile 'com.android.support:appcompat-v7:23.0.1'
-  compile 'com.google.guava:guava:18.0'
-  compile 'com.jakewharton:butterknife:7.0.1'
-  testCompile 'org.mockito:mockito-all:1.9.5'
-  testCompile 'junit:junit:4.10'
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'junit:junit:4.10'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.google.guava:guava:18.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:23.1.0'
 }
 
 task copyResDirectoryToDebugClasses(type: Copy) {
-  from "${projectDir}/src/test/res"
-  into "${buildDir}/intermediates/classes/test/debug/res"
+    from "${projectDir}/src/test/res"
+    into "${buildDir}/intermediates/classes/test/debug/res"
 }
 
 task copyResDirectoryToReleaseClasses(type: Copy) {
-  from "${projectDir}/src/test/res"
-  into "${buildDir}/intermediates/classes/test/release/res"
+    from "${projectDir}/src/test/res"
+    into "${buildDir}/intermediates/classes/test/release/res"
 }
 
 
