Update Android build dependencies
- Update Gradle wrapper to 2.14
- Update Android Gradle plug-in to 2.1.2
- Update compileSdkVersion to 24
- Update build-tools to 24.0.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: android
 
+jdk:
+  - oraclejdk8
+
 android:
   components:
-    - build-tools-23.0.0
-    - android-23
-    - extra-android-support
+    - tools
+    - build-tools-24.0.0
+    - android-24
+    - platform-tools
     - extra-google-m2repository
     - extra-android-m2repository
 
